# pico-simple-stupid-synth

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh  make-dist.sh  minicom.sh  monitor-midi.sh  screen.sh
docs/talks/gpn22/: Makefile  abstract.txt  common.mk
docs/talks/gpn22/bib/: gpn22.bib
docs/talks/gpn22/images/: Makefile
docs/talks/gpn22/slides/: Makefile  gpn22_slides.tex
src/: audio-target.cpp  audio-target.hpp  i2s-audio-target.cpp  i2s-audio-target.hpp  imidi-event-listener.hpp  midi-constants.hpp  midi-state-machine.cpp  midi-state-machine.hpp  pwm-audio-target.cpp  pwm-audio-target.hpp  simple-stupid-synth.cpp  simple-stupid-synth.hpp  usb_descriptors.c
